Fix buttons not stretching

--- a/sass/speakersbureau.scss
+++ b/sass/speakersbureau.scss
@@ -25,7 +25,7 @@ body#databaseRecordsPage.h-page-with-database-speakers-bureau {
     display: flex;
     flex-direction: row;
 
-    .button {
+    li {
       flex: 1;
     }
   }
